# Isometric-SFML-game-engine

./: .gitignore  CMakeLists.txt  GameProject.sln
GameProject/: Actor.cpp  Actor.h  ActorManager.cpp  ActorManager.h  ActorsIds.h  Characters.txt  Characters_backup.txt  CommandDispatcher.cpp  CommandDispatcher.h  CommandExecutors.cpp  CommandExecutors.h  Commands.cpp  Commands.h  ConstructingFunctions.h  DiContainer.h  Enemies.txt  Enemies_backup.txt  EntityLoader.cpp  EntityLoader.h  EntityTypes.txt  EntityTypes_backup.txt  Factory.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GameLevelState.cpp  GameLevelState.h  GameProject.cpp  GameProject.sln  GameProject.vcxproj  GameProject.vcxproj.filters  GameState.h  GameStateBase.h  GameStateManager.cpp  GameStateManager.h  LevelInfo.h  Logger.cpp  Logger.h  Map.cpp  (+20 more)
GameProject/Archive/: Actor.cpp  Actor.h  ActorManager.cpp  Entity.cpp  Entity.h  GameEngine.cpp  GameEngine.h  PathFollower.cpp  PathFollower.h  Player.h
GameProject/Command/: CommandDispatcher.cpp  CommandDispatcher.h  CommandExecutors.cpp  CommandExecutors.h  Commands.cpp  Commands.h
GameProject/CommandQueue/: CommandBase.h  CommandQueue.cpp  CommandQueue.h  SetEntityDestinatioCommand.cpp  SetEntityDestinatioCommand.h
GameProject/DiContainer/: ConstructingFunctions.h  DiContainer.h  Factory.h
GameProject/ECS/: ComponentBase.h  Entity.h  EntityContainer.cpp  EntityContainer.h  EntityManager.cpp  EntityManager.h  PathComponent.h  PositionComponent.cpp  PositionComponent.h  SpriteComponent.h
GameProject/ECS/Components/: AIControlledComponent.cpp  AIControlledComponent.h  AnimationComponent.cpp  AnimationComponent.h  ComponentBase.h  EntityStateComponent.cpp  EntityStateComponent.h  PathComponent.cpp  PathComponent.h  PositionComponent.cpp  PositionComponent.h  SpriteComponent.cpp  SpriteComponent.h  SpriteOrientationComponent.cpp  SpriteOrientationComponent.h  VisionComponent.cpp  VisionComponent.h
GameProject/ECS/Systems/: AnimationSystem.cpp  AnimationSystem.h  EntityMapPositionSystem.cpp  EntityMapPositionSystem.h  EntityVisionSystem.cpp  EntityVisionSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  SpriteOrientationSystem.cpp  SpriteOrientationSystem.h  SystemBase.cpp  SystemBase.h  VisualNotificationSystem.cpp  VisualNotificationSystem.h
GameProject/Events/: EventDispatcher.cpp  EventDispatcher.h  Events.cpp  Events.h  Observer.h  Subscription.cpp  Subscription.h
GameProject/Gui/: Button.cpp  Button.h  GameLevelController.cpp  GameLevelController.h  GuiManager.cpp  GuiManager.h  Layout.cpp  Layout.h  ToggledButtonLayout.cpp  ToggledButtonLayout.h  Widget.cpp  Widget.h
GameProject/Gui/Base/: Button.cpp  Button.h  GuiEventController.cpp  GuiEventController.h  GuiManager.cpp  GuiManager.h  Layout.cpp  Layout.h  Widget.cpp  Widget.h
GameProject/State/: GameLevelState.cpp  GameLevelState.h  GameStateBase.h  GameStateManager.cpp  GameStateManager.h
GameProject/Utils/: Logger.cpp  Logger.h  Meta.h  StructSerialization.h  Utility.cpp  Vector2D.h  utility.cpp  utility.h
GameProject/data/: Characters.txt  Enemies.txt  map1.txt  textures.txt
GameProject/images/: Toughguy_animations.txt  frog_animations.txt  ratman_animations.txt
